maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:19: error: ':' expected but ')' found.
def keepHandOnSideWall(cpt){
                          ^PledgeMaze:38: error: identifier expected but '}' found.
}
^