maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt = 0
  while(getY()!=0){
    if(cpt==0){
      keepHandOnSideWall()
    }
    else{
      avance()
    }
  }
  while(!estSurBiscuit){
    keepHandOnSideWall()
  }
  prendBiscuit()
  setDirection(Direction.EAST)
}

def keepHandOnSideWall(cpt){
  cpt=0
 	if(estFaceMur()){
    droite()
    cpt+=1
  }  
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  if(estFaceMur()){
    droite()
    cpt+=1
  }
  avance()
  gauche()
  cpt-=1
}